--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "dotenv": "^16.0.3"
+    "express": "^4.17.1"
   }
 }
